[Backend] Add JWT authentication filter and login & logout implementation